<resources>
    <string name="app_name">nawaCalculator</string>
    <string name="one">1</string>
    <string name="reset">C</string>
    <string name="root">√</string>
    <string name="minus">-</string>
    <string name="memory_total">mrc</string>
    <string name="nine">9</string>
    <string name="memory_plus">M+</string>
    <string name="seven">7</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="percent">%</string>
    <string name="two">2</string>
    <string name="memory_minus">M-</string>
    <string name="delete">←</string>
    <string name="divide">÷</string>
    <string name="eight">8</string>
    <string name="equal">=</string>
    <string name="change_operator">+/-</string>
    <string name="multiply">X</string>
    <string name="plus">+</string>
    <string name="decimal">.</string>
    <string name="zero">0</string>
    <string name="error">E</string>
    <string name="log">log</string>
    <string name="pie">\u213c</string>
    <string name="one_divide_x">1/x</string>
    <string name="factorial">x!</string>
    <string name="square">x\u00B2</string>
    <string name="power_y">x\u02B8</string>
    <string name="pie_value">3.1415926535897932384626433832795</string>
</resources>
